chore: add node engine for render deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,9 @@
 {
   "name": "evidence-vault-backend",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "description": "Backend for Digital Evidence Vault",
   "main": "server.js",
   "scripts": {
